syntax = "proto3";

package rivet.backend.pkg.game.namespace_version_set;

import "proto/common.proto";

message Request {
	rivet.common.Uuid namespace_id = 1;
	rivet.common.Uuid version_id = 2;
	optional rivet.common.Uuid creator_user_id = 3;
}

message Response {

}
